cmake_minimum_required(VERSION 3.17)
project(first)

set(CMAKE_CXX_STANDARD 14)

add_executable(first leetcode-43/solution.cpp)
add_executable(leetcode-78 leetcode-78/solution.cpp)
add_executable(leetcode-886 leetcode-886/solution.cpp)
add_executable(leetcode-43 leetcode-43/solution.cpp)
add_executable(leetcode-773 leetcode-773/solution.cpp leetcode-773/solution.cpp leetcode-773/solution.h)
