cmake_minimum_required(VERSION 3.17)
project(first)

set(CMAKE_CXX_STANDARD 14)

add_executable(first leetcode-43/solution.cpp)
add_executable(leetcode-78 leetcode-78/solution.cpp)
add_executable(leetcode-886 leetcode-886/solution.cpp)
add_executable(leetcode-43 leetcode-43/solution.cpp)
add_executable(leetcode-773 leetcode-773/solution.cpp)
add_executable(leetcode-5 leetcode-5/solution.cpp leetcode-5/solution.cpp leetcode-5/solution.h)
add_executable(leetcode-645 leetcode-645/solution.cpp leetcode-645/solution.cpp leetcode-645/solution.h)
add_executable(leetcode-382 leetcode-382/solution.cpp leetcode-382/solution.cpp leetcode-382/solution.h)